--- a/tvos1/home/CSS/home.css
+++ b/tvos1/home/CSS/home.css
@@ -81,7 +81,7 @@ main{
         display:none;
 }
 h3{
-        padding:20px;
+        padding:10px;
         margin:0;
         font-weight: normal;
 }
@@ -272,29 +272,48 @@ footer{background-color: #c8c8c8;
         bottom:0;
         }
 
-#rightHeader {
-    width: 100%;
-    height: 30px;
-}
+/*#rightHeader {*/
+    /*width: 100%;*/
+    /*height: 30px;*/
+/*}*/
 
-#newQuestion {
-    background-color:#090;
-        width:100px;
-        height:30px;
-        line-height:20px;
-        border-radius:3px;
-        border:0;
-        margin-right:10px;
-        float:right;
-        color:#fff;
-        font-weight:bold;
-        cursor:pointer;
-}
+/*#newQuestion {*/
+    /*background-color:#090;*/
+        /*width:100px;*/
+        /*height:30px;*/
+        /*line-height:20px;*/
+        /*border-radius:3px;*/
+        /*border:0;*/
+        /*margin-right:10px;*/
+        /*float:right;*/
+        /*color:#fff;*/
+        /*font-weight:bold;*/
+        /*cursor:pointer;*/
+/*}*/
 
-#rightContent {
-    position: relative;
-    top: 50px;
-    height:500px;
-}
+/*#rightContent {*/
+    /*position: relative;*/
+    /*top: 50px;*/
+    /*height:500px;*/
+/*}*/
 
+.list-title{
+        border-bottom:1px solid #dcdcdc;
+        padding:10px 20px;
+}
+.pull-right{
+        float: right;
+        margin-top:20px;
+}
+.list-table{
+        padding:10px 10px;
+}
+.data-table th{
+        background: #f8f8f8 none repeat scroll 0 0;
+}
+.data-table th,.data-table td{
+        border-top:1px solid #e2e2e2;
+        color: #666;
+        vertical-align: middle;
+}
 
